# architecture_patterns_with_python

./: pyproject.toml
app/chap01/: model.py
tests/test_batches/: test_allocate.py  test_batches.py
