[tool.poetry]
name = "architecture-patterns-with-python"
version = "0.1.0"
description = ""
authors = ["seriouskang <scdean110@gmail.com>"]
readme = "README.md"
packages = [{include = "architecture_patterns_with_python"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
